cmake_minimum_required (VERSION 2.6)
project (koband)

set (koband_VERSION_MAJOR 1)
set (koband_VERSION_MINOR 0)

option (TEMPERATURE "The temperature of the system" "1.0")
option (MASS "The mass of both atom types" "0.039")
option (LJPARAMS "Lennard-Jones parameters" "0.0 0.0")

# vim: ts=4:sts=4:sw=4:et:sta
